--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <ul>
         <li>I have completed my B.Tech from
             <strong>
-                <a href="https://www.jgec.ac.in">JGEC</a>
+                <a href="https://www.jgec.ac.in" target="_blank">JGEC</a>
             </strong> in 2018.</li>
         <li>I have completed my High School from
             <strong>Hakimpur High School</strong>
