--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Home | Noor's Personal Site</title>
+    <title>Noor's Personal Site</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
