--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <table cellspacing="20">
       <tr>
         <td>
-          <img src="./images/profile/profile-round.png" alt="Noor's Profile" />
+          <img src="./images/profile/Joker.jpg" alt="Noor's Profile" />
         </td>
         <td>
           <h1>Noor Salim</h1>
