--- a/html/Test File.html
+++ b/html/Test File.html
@@ -30,8 +30,8 @@
 	<br>
 	Designed by <b><i>NSG</i></b><br>
 	&copy; 2019 All Rights Reserved
-	<p>Mailto : <a href="mailto:nsg1810@cse.jgec.ac.in">nsg1810@cse.jgec.ac.in</a>
-		<br>Cell : <a href="tel:+917001896977">+917001896977</a></p>
+	<p>Mailto : <a href="mailto:mail@email.com">mail@email.com</a>
+		<br>Cell : <a href="tel:+917777777777">+917777777777</a></p>
 </footer>
 
 </html>
