--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
 
           <p>
             I am a Web Developer. I have mostly worked in back-end as a
-            <strong>Node.js</strong> developer. Currently I'm learning front-end
-            technologies.
+            <strong>Node.js</strong> developer. Currently I'm learning front-end technologies.
           </p>
         </td>
       </tr>
@@ -121,10 +120,10 @@
       <li value="1">Playing Cricket</li>
       <li>Watching Movie</li>
       <li>
-        <a href="intro.html">Books</a>
+        <a href="./intro.html">Books</a>
       </li>
     </ol>
-    <a href="contact.html">Contact me</a>
+    <a href="./html/contact.html">Contact me</a>
     <br />
     <br />
     <!-- <img src="./images/Orange-Sunburst.jpg" alt="Sunset"> -->
