--- a/web/Progress Bar/bar_2.html
+++ b/web/Progress Bar/bar_2.html
@@ -36,10 +36,10 @@
       setInterval(() => {
         if (counter === 100) clearInterval();
         else {
-          counter++;
+          counter = counter + 4;
           number.innerHTML = counter + '%';
         }
-      }, 44.5);
+      }, 500);
     </script>
   </body>
 </html>
